# gene-thesaurus

./: LICENSE  README.md  pyproject.toml  requirements.txt
gene_thesaurus/: gene_thesaurus.py
src/: gene_thesaurus.py  hgnc_translation_provider.py  ncbi_translation_provider.py  translation_provider.py
src/gene_thesaurus/: __init__.py  gene_thesaurus.py  hgnc_translation_provider.py  ncbi_translation_provider.py
tests/: test_gene_thesaurus.py  test_hgnc_translation_provider.py
