# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gene-thesaurus"
version = "v2.2.0"
description = "GeneThesaurus is a Python package that translates gene aliases and old gene symbols to the current HGNC standard gene symbols."
readme = "README.md"
authors = [{ name = "Mariya Lysenkova Wiklander", email = "mariya.lysenkova@medsci.uu.se" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["genomics", "gene", "HGNC"]
dependencies = [
    "requests >= 2.31.0"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "bumpver", "pip-tools", "freezegun", "flake8"]

[project.urls]
Homepage = "https://github.com/Molmed/gene-thesaurus"


[tool.bumpver]
current_version = "v2.2.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"README.md" = [
    "{version}",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
